# kryzen-telegram-business

./: .env  .env.example  .gitignore  .replit  DEPLOY.md  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  main.py  pyproject.toml  replit.nix  requirements-api.txt  requirements-bot.txt  requirements-test.txt  requirements.txt
app/: __main__.py
app/api/: app.py  deps.py
app/bot/: bot.py  run.py
app/business/: dispatcher.py  router.py
app/config/: __init__.py  logging.py  settings.py
app/database/: __init__.py  base.py  session.py
app/filters/: role.py
app/handlers/: __init__.py  admin.py  ai.py  business.py  fallback.py  menu.py  promo.py  rules.py  start.py
app/keyboards/: menu.py
app/middlewares/: db.py  throttling.py  user.py
app/models/: __init__.py  _registry.py  ai_history.py  audit_log.py  business.py  chat.py  enums.py  media.py  message.py  notification.py  promocode.py  rule.py  subscription.py  system_log.py  user.py
app/repositories/: __init__.py  ai_history.py  audit_log.py  base.py  business.py  chat.py  message.py  notification.py  promocode.py  rule.py  subscription.py  user.py
app/schemas/: __init__.py  ai.py  auth.py  broadcast.py  business.py  common.py  message.py  promocode.py  rule.py  user.py
app/security/: __init__.py  encryption.py  jwt_handler.py  telegram_auth.py
app/services/: __init__.py  ai.py  business.py  message.py  notification.py  promocode.py  rule.py  subscription.py  user.py
app/utils/: __init__.py  (+5 more)
docker/: nginx.conf
scripts/: dev.sh  migrate.sh  replit_run.sh  replit_setup.sh  start.sh
